# nheqminer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE_MIT  README.md
Linux_cmake/nheqminer_AMD/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  nheqminer_AMD
Linux_cmake/nheqminer_cpu/: CMakeLists.txt
Linux_cmake/nheqminer_cpu_tromp/: CMakeLists.txt
Linux_cmake/nheqminer_cpu_xenocat/: CMakeLists.txt
Linux_cmake/nheqminer_cpu_xenoncat/: CMakeLists.txt
Linux_cmake/nheqminer_cuda_djezo/: CMakeLists.txt
Linux_cmake/nheqminer_cuda_sa/: CMakeLists.txt
Linux_cmake/nheqminer_cuda_tromp/: CMakeLists.txt
blake2/: blake2-config.h  blake2b-round.h
cmake/Hunter/: config.cmake
cpu_tromp/: CMakeLists.txt  cpu_tromp.cpp  cpu_tromp.hpp  cpu_tromp.vcxproj  cpu_tromp.vcxproj.filters  equi.h  equi_miner.h
cpu_tromp/blake2/: blake2bx.cpp
cpu_verushash/: CMakeLists.txt  cpu_verushash.cpp  cpu_verushash.hpp  cpu_verushash.vcxproj  cpu_verushash.vcxproj.filters
cpu_xenoncat/: CMakeLists.txt  cpu_xenoncat.hpp  cpu_xenoncat.vcxproj  cpu_xenoncat.vcxproj.filters  xenoncat.cpp
cpu_xenoncat/Linux/asm/: assemble.sh  data_blake2b.asm  equihash_avx1.asm  equihash_avx2.asm  fasm  macro_eh.asm  proc_ehprepare_avx1.asm  proc_ehsolver_avx1.asm
cpu_xenoncat/Linux/blake2b/: example_avx1.c  example_avx2.c
cpu_xenoncat/Linux/blake2b/asm/: assemble.sh  data_blake2b.asm  macro_blake2b_avx2.asm  proc_blake2_avx1.asm  proc_blake2_avx2.asm  proc_prepmidstate_avx1.asm  proc_prepmidstate_avx2.asm  zcblake2_avx1.asm  zcblake2_avx2.asm
cpu_xenoncat/Linux/demo/: Makefile  quickbench.c  solver.c
cpu_xenoncat/asm/: data_blake2b.asm  params.inc  proc_ehprepare_avx1.asm  proc_ehprepare_avx2.asm  proc_ehsolver_avx1.asm  proc_ehsolver_avx2.asm  struct_eh.inc  xenoncat_AVX.asm  xenoncat_AVX2.asm
cpu_xenoncat/asm_linux/: assemble.sh  equihash_avx1.asm  equihash_avx2.asm  macro_blake2b_avx1.asm  proc_ehprepare_avx2.asm  proc_ehsolver_avx2.asm
cpu_xenoncat/asm_mac/: assemble.sh  fasm  objconv
cuda_djezo/: CMakeLists.txt  LICENSE  blake2b.cu  cuda_djezo.cpp  cuda_djezo.hpp  cuda_djezo.vcxproj  eqcuda.hpp  equi_miner.cu
cuda_silentarmy/: cuda_silentarmy.cpp  cuda_silentarmy.hpp  cuda_silentarmy.vcxproj  kernel.cu  param.h  sa_blake.cpp  sa_blake.h  sa_cuda_context.hpp
cuda_tromp/: CMakeLists.txt  blake2b.cu  cuda_tromp.cpp  cuda_tromp.hpp  cuda_tromp.vcxproj  eqcuda.hpp  equi_miner.cu
doc/Linux/: Readme.txt
doc/Mac/: Readme.txt
doc/Windows/: Readme.txt
logsetuplib/: logsetuplib.vcxproj  main.cpp
nheqminer/: AvailableSolvers.cpp  AvailableSolvers.h  CMakeLists.txt  ISolver.h  MinerFactory.cpp  MinerFactory.h  Solver.h  SolverStub.h  api.cpp  api.hpp  arith_uint256.cpp  hash.h  main.cpp  nheqminer.pro  nheqminer.sln  nheqminer.vcxproj  nheqminer.vcxproj.filters  qmake_nheqminer.pro  serialize.h  speed.cpp  speed.hpp  toolchain-mingw64.cmake  uint256.h  version.h
nheqminer/blake2/: blake2.h  blake2b.c  core.c
nheqminer/compat/: endian.h
nheqminer/crypto/: clhash.c  clhash.h  common.h  equihash.cpp  equihash.h  haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.cpp  verus_hash.h
nheqminer/libs/win64/: libboost_atomic-vc120-mt-1_62.lib  libboost_filesystem-vc120-mt-1_62.lib  libboost_system-vc120-mt-1_62.lib
nheqminer/libstratum/: StratumClient.cpp  StratumClient.h  ZcashStratum.cpp  ZcashStratum.h
nheqminer/primitives/: block.cpp  block.h  nonce.cpp  nonce.h  transaction.cpp  transaction.h
nheqminer/support/allocators/: zeroafterfree.h
nheqminer/trompequihash/: equi.h  equi_miner.h  equi_miner2.h
nheqminer/trompequihash/blake2-ref/: blake2bp-ref.c  blake2s-ref.c  blake2sp-ref.c  blake2xb-ref.c  blake2xs-ref.c  genkat-json.c  makefile
nheqminer/trompequihash/pthreads/: pthread.h
nheqminer/zcash/: JoinSplit.hpp
ocl_device_utils/: OpenCLDevice.h  cl_ext.hpp  ocl_device_utils.cpp  ocl_device_utils.h  ocl_device_utils.vcxproj  ocl_device_utils.vcxproj.filters  opencl.cpp  opencl.h
ocl_silentarmy/: ocl_silentarmy.cpp  ocl_silentarmy.hpp  ocl_silentarmy.vcxproj  ocl_silentarmy.vcxproj.filters  param.h  sa_blake.cpp
ocl_silentarmy/zcash/gpu/: input.cl  kernel.cl
ocl_xpm/: README.md  ocl_silentarmy.cpp  ocl_silentarmy.hpp  ocl_xmp.cpp  ocl_xmp.hpp  ocl_xpm.vcxproj  ocl_xpm.vcxproj.filters  opencl.cpp  opencl.h  param.h  primes.txt  sa_blake.h
ocl_xpm/ocl_device_utils/: ocl_device_utils.cpp  ocl_device_utils.h
ocl_xpm/zcash/gpu/: common.h  kernel.cl
